syntax = "proto3";
//命名空间,尽量跟文件名是一样的
package IM.Login;

//定义服务
service ImLogin{
    rpc Regist(IMRegistReq) returns (IMRegistRes) {}
    rpc Login(IMLoginReq) returns (IMLoginRes) {}
}

//注册账号
message IMRegistReq{
    string user_name = 1;  //用户名
    string password = 2;   //密码
}
//注册返回
message IMRegistRes{
    string user_name = 1;  //用户名
    uint32 user_id = 2;    
    uint32 result_code = 3; //返回码是0的时候就是正确的
}

//登录请求
message IMLoginReq{
    string user_name = 1;  //用户名
    string password = 2;   //密码
}
//登录返回
message IMLoginRes{
    uint32 user_id = 1;    
    uint32 result_code = 2; //返回码是0的时候就是正确的
} 